--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,291 +1,307 @@
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  background: #2E3740;
-  color: #435160;
-  font-family: "Open Sans", sans-serif;
+    background: #fff1cd;
+    color: #435160;
+    font-family: "Open Sans", sans-serif;
 }
 
 h2 {
-  color: #6D7781;
-  font-family: "Sofia", cursive;
-  font-size: 15px;
-  font-weight: bold;
-  font-size: 3.6em;
-  text-align: center;
-  margin-bottom: 20px;
+    color: #6D7781;
+    font-family: "Sofia", cursive;
+    font-size: 15px;
+    font-weight: bold;
+    font-size: 3.6em;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 a {
-  color: #435160;
-  text-decoration: none;
+    color: #435160;
+    text-decoration: none;
 }
 
 .login {
-  width: 350px;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  margin-left: -175px;
+    width: 350px;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    margin-left: -175px;
 }
 
 input[type="text"], input[type="password"] {
-  width: 350px;
-  padding: 20px 0px;
-  background: transparent;
-  border: 0;
-  border-bottom: 1px solid #435160;
-  outline: none;
-  color: #6D7781;
-  font-size: 16px;
+    width: 350px;
+    padding: 20px 0px;
+    background: transparent;
+    border: 0;
+    border-bottom: 1px solid #435160;
+    outline: none;
+    color: #6D7781;
+    font-size: 16px;
 }
+
 input[type=checkbox] {
-  display: none;
+    display: none;
 }
 
 label {
-  display: block;
-  position: absolute;
-  margin-right: 10px;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background: transparent;
-  content: "";
-  transition: all 0.3s ease-in-out;
-  cursor: pointer;
-  border: 3px solid #435160;
+    display: block;
+    position: absolute;
+    margin-right: 10px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: transparent;
+    content: "";
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+    border: 3px solid #435160;
 }
 
-#agree:checked ~ label[for=agree] {
-  background: #435160;
+#agree:checked~label[for=agree] {
+    background: #435160;
 }
 
 input[type="submit"] {
-  background: #1FCE6D;
-  border: 0;
-  width: 350px;
-  height: 40px;
-  border-radius: 3px;
-  color: #fff;
-  font-size: 12px;
-  cursor: pointer;
-  transition: background 0.3s ease-in-out;
+    background: #1FCE6D;
+    border: 0;
+    width: 350px;
+    height: 40px;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 22px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: background 0.3s ease-in-out;
 }
+
 input[type="submit"]:hover {
-  background: #16aa56;
-  animation-name: shake;
+    background: #16aa56;
+    animation-name: shake;
 }
 
 .forgot {
-  margin-top: 30px;
-  display: block;
-  font-size: 11px;
-  text-align: center;
-  font-weight: bold;
+    margin-top: 30px;
+    display: block;
+    font-size: 11px;
+    text-align: center;
+    font-weight: bold;
 }
+
 .forgot:hover {
-  margin-top: 30px;
-  display: block;
-  font-size: 11px;
-  text-align: center;
-  font-weight: bold;
-  color: #6D7781;
+    margin-top: 30px;
+    display: block;
+    font-size: 11px;
+    text-align: center;
+    font-weight: bold;
+    color: #6D7781;
 }
 
 .agree {
-  padding: 30px 0px;
-  font-size: 12px;
-  text-indent: 25px;
-  line-height: 15px;
+    padding: 30px 0px;
+    font-size: 12px;
+    text-indent: 25px;
+    line-height: 15px;
 }
 
 ::-webkit-input-placeholder {
-  color: #435160;
-  font-size: 12px;
+    color: #435160;
+    font-size: 12px;
 }
 
 .animated {
-  animation-fill-mode: both;
-  animation-duration: 1s;
+    animation-fill-mode: both;
+    animation-duration: 1s;
 }
 
 @keyframes shake {
-  0%, 100% {
-    transform: translateX(0);
-  }
-  10%, 30%, 50%, 70%, 90% {
-    transform: translateX(-10px);
-  }
-  20%, 40%, 60%, 80% {
-    transform: translateX(10px);
-  }
+    0%, 100% {
+        transform: translateX(0);
+    }
+    10%, 30%, 50%, 70%, 90% {
+        transform: translateX(-10px);
+    }
+    20%, 40%, 60%, 80% {
+        transform: translateX(10px);
+    }
 }
 
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
-*,
-*:after,
-*:before {
-  box-sizing: border-box;
+
+*, *:after, *:before {
+    box-sizing: border-box;
 }
-html {
-  line-height: 1.2;
-}
-body {
-  background-color: #f5f5f5;
-  color: #333;
-  font-family: "Roboto", arial, sans-serif;
-  font-size: 16px;
-}
+
 .selected-item {
-  margin: 20px 0;
-  text-align: center;
+    margin: 20px 0;
+    text-align: center;
 }
+
 .selected-item p {
-  font-size: 18px;
+    font-size: 18px;
 }
+
 .selected-item p span {
-  font-weight: bold;
+    font-weight: bold;
 }
+
+
 /* dropdown list */
+
 .dropdown {
-  margin: 20px auto;
-  width: 300px;
-  position: relative;
-  -webkit-perspective: 800px;
-          perspective: 800px;
+    margin: 20px auto;
+    width: 300px;
+    position: relative;
+    -webkit-perspective: 800px;
+    perspective: 800px;
 }
+
 .dropdown.active .selLabel:after {
-  content: '\25B2';
+    content: '\25B2';
 }
+
 .dropdown.active .dropdown-list li:nth-child(1) {
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
 }
+
 .dropdown.active .dropdown-list li:nth-child(2) {
-  -webkit-transform: translateY(200%);
-          transform: translateY(200%);
+    -webkit-transform: translateY(200%);
+    transform: translateY(200%);
 }
+
 .dropdown.active .dropdown-list li:nth-child(3) {
-  -webkit-transform: translateY(300%);
-          transform: translateY(300%);
+    -webkit-transform: translateY(300%);
+    transform: translateY(300%);
 }
+
 .dropdown.active .dropdown-list li:nth-child(4) {
-  -webkit-transform: translateY(400%);
-          transform: translateY(400%);
+    -webkit-transform: translateY(400%);
+    transform: translateY(400%);
 }
-.dropdown > span {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  color: #fff;
-  font-size: 18px;
-  letter-spacing: 2px;
-  background: #34495e;
-  display: block;
-  padding: 0 50px 0 30px;
-  position: relative;
-  z-index: 9999;
-  cursor: pointer;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  -webkit-transform-origin: 50% 0%;
-          transform-origin: 50% 0%;
-  -webkit-transition: -webkit-transform 300ms;
-  transition: -webkit-transform 300ms;
-  transition: transform 300ms;
-  transition: transform 300ms, -webkit-transform 300ms;
-  -webkit-backface-visibility: hidden;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+
+.dropdown>span {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    color: #fff;
+    font-size: 18px;
+    letter-spacing: 2px;
+    background: #34495e;
+    display: block;
+    padding: 0 50px 0 30px;
+    position: relative;
+    z-index: 9999;
+    cursor: pointer;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+    -webkit-transition: -webkit-transform 300ms;
+    transition: -webkit-transform 300ms;
+    transition: transform 300ms;
+    transition: transform 300ms, -webkit-transform 300ms;
+    -webkit-backface-visibility: hidden;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
-.dropdown > span:after {
-  content: '\25BC';
-  position: absolute;
-  right: 0px;
-  top: 15%;
-  width: 50px;
-  text-align: center;
-  font-size: 12px;
-  padding: 10px;
-  height: 70%;
-  line-height: 24px;
-  border-left: 1px solid #ddd;
+
+.dropdown>span:after {
+    content: '\25BC';
+    position: absolute;
+    right: 0px;
+    top: 15%;
+    width: 50px;
+    text-align: center;
+    font-size: 12px;
+    padding: 10px;
+    height: 70%;
+    line-height: 24px;
+    border-left: 1px solid #ddd;
 }
-.dropdown > span:active {
-  -webkit-transform: rotateX(45deg);
-          transform: rotateX(45deg);
+
+.dropdown>span:active {
+    -webkit-transform: rotateX(45deg);
+    transform: rotateX(45deg);
 }
-.dropdown > span:active:after {
-  content: '\25B2';
+
+.dropdown>span:active:after {
+    content: '\25B2';
 }
+
 .dropdown-list {
-  position: absolute;
-  top: 0px;
-  width: 100%;
+    position: absolute;
+    top: 0px;
+    width: 100%;
 }
+
 .dropdown-list li {
-  display: block;
-  list-style: none;
-  left: 0;
-  opacity: 1;
-  -webkit-transition: -webkit-transform 300ms ease;
-  transition: -webkit-transform 300ms ease;
-  transition: transform 300ms ease;
-  transition: transform 300ms ease, -webkit-transform 300ms ease;
-  position: absolute;
-  top: 0;
-  width: 100%;
+    display: block;
+    list-style: none;
+    left: 0;
+    opacity: 1;
+    -webkit-transition: -webkit-transform 300ms ease;
+    transition: -webkit-transform 300ms ease;
+    transition: transform 300ms ease;
+    transition: transform 300ms ease, -webkit-transform 300ms ease;
+    position: absolute;
+    top: 0;
+    width: 100%;
 }
+
 .dropdown-list li:nth-child(1) {
-  background-color: #1abc9c;
-  z-index: 4;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+    background-color: #1abc9c;
+    z-index: 4;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
 }
+
 .dropdown-list li:nth-child(2) {
-  background-color: #3498db;
-  z-index: 3;
-  -webkit-transform: translateY(3%);
-          transform: translateY(3%);
+    background-color: #3498db;
+    z-index: 3;
+    -webkit-transform: translateY(3%);
+    transform: translateY(3%);
 }
+
 .dropdown-list li:nth-child(3) {
-  background-color: #9b59b6;
-  z-index: 2;
-  -webkit-transform: translateY(6%);
-          transform: translateY(6%);
+    background-color: #9b59b6;
+    z-index: 2;
+    -webkit-transform: translateY(6%);
+    transform: translateY(6%);
 }
+
 .dropdown-list li:nth-child(4) {
-  background-color: #e67e22;
-  z-index: 1;
-  -webkit-transform: translateY(9%);
-          transform: translateY(9%);
+    background-color: #e67e22;
+    z-index: 1;
+    -webkit-transform: translateY(9%);
+    transform: translateY(9%);
 }
+
 .dropdown-list li span {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-  -webkit-backface-visibility: hidden;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  width: 100%;
-  font-size: 18px;
-  line-height: 60px;
-  padding: 0 30px;
-  display: block;
-  color: #fff;
-  cursor: pointer;
-  letter-spacing: 2px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    -webkit-backface-visibility: hidden;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    width: 100%;
+    font-size: 18px;
+    line-height: 60px;
+    padding: 0 30px;
+    display: block;
+    color: #fff;
+    cursor: pointer;
+    letter-spacing: 2px;
 }
