--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -24,20 +24,56 @@ a {
     text-decoration: none;
 }
 
+.strike {
+    display: block;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    margin-top: 50px;
+}
+
+.strike>span {
+    position: relative;
+    display: inline-block;
+}
+
+.strike>span:before, .strike>span:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    width: 9999px;
+    height: 1px;
+    background: red;
+}
+
+.strike>span:before {
+    right: 100%;
+    margin-right: 15px;
+}
+
+.strike>span:after {
+    left: 100%;
+    margin-left: 15px;
+}
+
+#select-heading {}
+
 .forms {
     text-align: center;
+    margin: auto;
+    width: 100%;
 }
 
 .login {
     width: 350px;
     position: absolute;
-    top: 10%;
+    top: 5%;
     left: 50%;
     margin-left: -175px;
 }
 
 input[type="text"], input[type="password"] {
-    width: 350px;
+    width: 250px;
     padding: 20px 0px;
     background: transparent;
     border: 0;
@@ -45,6 +81,9 @@ input[type="text"], input[type="password"] {
     outline: none;
     color: #6D7781;
     font-size: 16px;
+    float: none;
+    margin: 0 auto;
+    display: table;
 }
 
 input[type=checkbox] {
@@ -81,16 +120,86 @@ input[type="submit"] {
     cursor: pointer;
     position: absolute;
     margin: auto;
-    margin-top: 30px;
     left: 0;
     right: 0;
+    bottom:-40%;
     transition: background 0.3s ease-in-out;
 }
 
 input[type="submit"]:hover {
     background: #16aa56;
     animation-name: shake;
+}@import url(https://fonts.googleapis.com/css?family=Lato:400,700,300);
+body {
+  font-family: 'Lato', sans-serif;
 }
+
+
+.form {
+  width: 250px;
+  margin: auto;
+}
+
+.file-upload-wrapper {
+  position: relative;
+  width: 100%;
+  height: 60px;
+}
+.file-upload-wrapper:after {
+  content: attr(data-text);
+  font-size: 18px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #fff;
+  padding: 10px 15px;
+  display: block;
+  width: calc(100% - 40px);
+  pointer-events: none;
+  z-index: 20;
+  height: 60px;
+  line-height: 40px;
+  color: #999;
+  border-radius: 5px 10px 10px 5px;
+  font-weight: 300;
+}
+.file-upload-wrapper:before {
+  content: 'Upload';
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  height: 60px;
+  background: #4daf7c;
+  color: #fff;
+  font-weight: 700;
+  z-index: 25;
+  font-size: 16px;
+  line-height: 60px;
+  padding: 0 15px;
+  text-transform: uppercase;
+  pointer-events: none;
+  border-radius: 0 5px 5px 0;
+}
+.file-upload-wrapper:hover:before {
+  background: #3d8c63;
+}
+.file-upload-wrapper input {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 99;
+  height: 60px;
+  margin: 0;
+  padding: 0;
+  display: block;
+  cursor: pointer;
+  width: 100%;
+}
+
 
 .forgot {
     margin-top: 30px;
