--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
-<form action="/" method="post">
-  First name:<br>
-  <input type="text" name="firstname"><br>
-  Last name:<br>
-  <input type="text" name="lastname">
-  <button >Submit</button>
+<form action="/" method="post" enctype=multipart/form-data>
+    First name:<br>
+    <input type="text" name="firstname"><br> Last name:<br>
+    <input type="text" name="lastname">
+    <input type="file" name="file">
+    <button>Submit</button>
 </form>
